# hiv_malawi

./: .gitignore  CMakeLists.txt  README.md  bdm.json  df  run-opladev.sh  style_check.sh  trigger-ci.txt  update_style.sh  vtune.sh
.github/workflows/: code-style.yml  macos-ci.yml  ubuntu-ci.yml
src/: analyze.cc  analyze.h  bdm-simulation.cc  bdm-simulation.h  categorical-environment.cc  categorical-environment.h  custom-operations.cc  custom-operations.h  datatypes.h  hiv-ops.cc  hiv-ops.h  hiv_malawi.cc  hiv_malawi.h  main.cc  main.h  person-behavior.h  person.h  population-initialization.cc  population-initialization.h  sim-param.cc  sim-param.h  stdout-utlis.cc  stdout-utlis.h  storage.cc  storage.h  visualize.cc  visualize.h
test/: test_main.cc  test_suit_counters.cc  test_suit_initialization.cc  test_suit_person.cc  test_suit_transitions.cc  test_suit_util.cc
